prod-rucio-v1/prometheus/activemq/kubernetes/active-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activemq
  labels:
    app: activemq
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: activemq
  template:
    metadata:
      labels:
        app: activemq
    spec:
      containers:
      - name: activemq
        image: webcenter/activemq:latest
        imagePullPolicy: Always
        ports:
        - name: stomp
          containerPort: 61616
        - name: dashboard
          containerPort: 8161
        resources:
          requests:
            memory: 1Gi
            cpu: 100m
          limits:
            memory: 2Gi
            cpu: 1
