prod-rucio-v1/prometheus/activemq/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: activemq
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
  - name: stomp 
    port: 61616
    targetPort: 61616
  - name: dashboard
    port: 8161
    targetPort: 8161
  selector:
    app: activemq
